# nome

./: .gitmodules  CMakeLists.txt  README.md  appveyor.yml
engine/: engine.cpp  engine.h  physics.cpp  physics.h  system_renderer.cpp  system_resources.cpp  system_resources.h
engine/lib_ecm/: ecm.cpp  ecm.h
engine/lib_maths/: maths.h
engine/lib_tiles/: levelsystem.cpp  levelsystem.h
nome/: game.h  main.cpp
nome/classes/: astar.cpp  astar.h  decision-branches.cpp  decision-branches.h  decision-leaves.cpp  decision-leaves.h  decisions.cpp  decisions.h  steering.cpp  steering.h
nome/components/: cmp_actor_movement.cpp  cmp_actor_movement.h  cmp_audio.cpp  cmp_audio.h  cmp_decision_tree.cpp  cmp_decision_tree.h  cmp_enemy_movement.cpp  cmp_enemy_movement.h  cmp_movement.cpp  cmp_movement.h  cmp_pathfinding.cpp  cmp_pathfinding.h  cmp_physics.cpp  cmp_physics.h  cmp_player_movement.cpp  cmp_player_movement.h  cmp_shape.cpp  cmp_shape.h  cmp_state_machine.cpp  cmp_state_machine.h  cmp_steering.cpp  cmp_steering.h  cmp_text.cpp  cmp_text.h
nome/scenes/: scn_level1.cpp  scn_level1.h  scn_load.cpp  scn_load.h  scn_menu.cpp  scn_menu.h  scn_of_death.cpp  scn_of_death.h  scn_options.cpp  scn_options.h  scn_paused.cpp  scn_paused.h  scn_remap.cpp  scn_remap.h  scn_save.cpp  scn_save.h  scn_ui.cpp  scn_ui.h
nome/states/: enemy_states.cpp  enemy_states.h
res/levels/: level1.txt
res/music/: Nomes_Theme.flac
